fix: icon alignment

--- a/src/components/Timeline/timeline.styles.css
+++ b/src/components/Timeline/timeline.styles.css
@@ -8,7 +8,6 @@
     overflow: hidden;
     align-items: center;
     justify-content: center;
-    margin: auto;
     display: flex;
 }
 .vertical-timeline-element-title, .vertical-timeline-element-subtitle, .vertical-timeline-element--event p,.vertical-timeline-element--session p{
